--- a/MAA307_611AB.ipynb
+++ b/MAA307_611AB.ipynb
@@ -19,9 +19,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e77cbaf5-83e2-43b2-9f80-274c9b437023",
+   "metadata": {},
+   "source": [
+    "We place ourselves in the framework of Exercise 6.8. We consider the problem\n",
+    "$$\n",
+    "\\text{minimize}_{x\\in\\mathbb{R}^n} \\frac{1}{2}\\langle Ax,x\\rangle - \\langle b,x\\rangle \\quad\\text{subject to} \\quad Cx=d\n",
+    "$$\n",
+    "where $A\\in\\mathcal{M}_n(\\mathbb{R})$ is symmetric positive definite, $b\\in\\mathbb{R}^n$, $C\\in\\mathcal{M}_{m,n}(\\mathbb{R})$, and $d\\in\\mathbb{R}^m$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e77cbaf5-83e2-43b2-9f80-274c9b437023",
+   "id": "fd3f7ef4",
    "metadata": {},
    "outputs": [],
    "source": []
