--- a/MAA307_611AB.ipynb
+++ b/MAA307_611AB.ipynb
@@ -68,7 +68,7 @@
     "We can explicitely compute the update step for $x_k$. We have\n",
     "\\begin{align*}\n",
     "    x^k\\in\\argmin_{x\\in X} L(x, \\lambda^k)&\\iff \\nabla_x L(x^k, \\lambda^k)=0 \\\\\n",
-    "    &\\iff 2Ax^k-b+C^t\\lambda^k =0 \\\\\n",
+    "    &\\iff Ax^k-b+C^t\\lambda^k =0 \\\\\n",
     "    &\\iff x^k=A^{-1}(b-C^t\\lambda^k)\n",
     "\\end{align*}"
    ]
@@ -346,6 +346,17 @@
     "We now implement the augmented Lagrangian method. The augmented Lagrangian of parameter $\\beta>0$ for $(x,y)\\in E\\times Y$ is given by\n",
     "\\begin{align*}\n",
     "    L_{\\beta}(x,\\lambda)&= \\frac{1}{2}\\langle Ax,x\\rangle - \\langle b,x\\rangle + \\langle \\lambda,Cx-d\\rangle + \\frac{\\beta}{2}\\lVert Cx-d\\rVert^2\n",
+    "\\end{align*}\n",
+    "\n",
+    "We derive our new update rules for $x^k$ and $\\lambda^k$. We have\n",
+    "\\begin{align*}\n",
+    "    x^k\\in\\argmin_{x\\in X} L_{\\beta}(x, \\lambda^k)&\\iff \\nabla_x L_{\\beta}(x^k, \\lambda^k)=0 \\\\ \n",
+    "    &\\iff Ax^k-b+C^t\\lambda^k +\\beta C\\lVert Cx^k-d\\rVert=0 \\\\\n",
+    "    &\\iff x^k=(A+\\beta C^tC)^{-1}(b-C^t\\lambda^k-\\beta C^td)\n",
+    "\\end{align*}\n",
+    "as well as\n",
+    "\\begin{align*}\n",
+    "    \\lambda_{k+1}=\\lambda^k+\\beta (Cx^k-d)\n",
     "\\end{align*}"
    ]
   },
@@ -353,7 +364,104 @@
    "cell_type": "markdown",
    "id": "c97cdc8a",
    "metadata": {},
-   "source": []
+   "source": [
+    "We now implement the augmented Lagrangian method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "d4d692c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def uzawa_augmented(A, b, C, d, beta, tol, max_iter=None):\n",
+    "    # Initialization\n",
+    "    lambda_ = np.zeros(d.shape)\n",
+    "    inv = np.linalg.inv(A + beta * C.T @ C)\n",
+    "    x = inv @ (b - C @ lambda_ - beta * C.T @ d)\n",
+    "    lambda_ = lambda_ + beta * (C @ x -d)\n",
+    "    iterations = 1\n",
+    "    while True:\n",
+    "        # Update\n",
+    "        x_new = inv @ (b - C @ lambda_ - beta * C.T @ d)\n",
+    "        lambda_ = lambda_ + beta * (C @ x_new - d)\n",
+    "        iterations += 1\n",
+    "        # Stopping criterion\n",
+    "        if np.linalg.norm(x_new - x) < tol or iterations == max_iter:\n",
+    "            return x_new, lambda_, iterations\n",
+    "        x = x_new"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d54859a8",
+   "metadata": {},
+   "source": [
+    "We compare the augmented Lagrangian method with the Uzawa algorithm for the examples previously seen. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "e5cabe4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-83-408dd2dd0999>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambda_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muzawa_augmented\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mcompare_methods\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-83-408dd2dd0999>\u001b[0m in \u001b[0;36mcompare_methods\u001b[0;34m(A, b, C, d)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mbeta\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mtau\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e-6\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambda_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mUzawa\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtau\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambda_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muzawa_augmented\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-39-eb72520f147a>\u001b[0m in \u001b[0;36mUzawa\u001b[0;34m(A, b, C, d, stepsize, tol, max_iter)\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0miterations\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;31m# Stopping criterion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_new\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mtol\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterations\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mmax_iter\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mx_new\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambda_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_new\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mnorm\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36mnorm\u001b[0;34m(x, ord, axis, keepdims)\u001b[0m\n\u001b[1;32m   2471\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2472\u001b[0m             \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'K'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2473\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0misComplexType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2474\u001b[0m                 \u001b[0msqnorm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2475\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36misComplexType\u001b[0;34m(t)\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0misComplexType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0missubclass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomplexfloating\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m _real_types_map = {single : single,\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "def compare_methods(A, b, C, d):\n",
+    "    for beta in [0.1, 0.5, 1, 2]:\n",
+    "        tau = 1e-6\n",
+    "        x, lambda_, iters = Uzawa(A, b, C, d, tau, tol=1e-6)\n",
+    "        x, lambda_, iters = uzawa_augmented(A, b, C, d, beta, tol=1e-6)\n",
+    "\n",
+    "compare_methods(A, b, C, d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bec76318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[2, 0], [0, 1]]) # Symmetric positive definite\n",
+    "C = np.array([[1,3], [2,1]]) # Surjective\n",
+    "d = np.array([3,1])\n",
+    "b = np.array([2,1])\n",
+    "\n",
+    "compare_methods(A, b, C, d)\n",
+    "\n",
+    "A = np.array([[1, 0], [0, 1]]) # Identity\n",
+    "C = np.array([[1,3], [2,1]]) # Surjective\n",
+    "d = np.array([3,1])\n",
+    "b = np.array([2,1])\n",
+    "\n",
+    "compare_methods(A, b, C, d)\n",
+    "\n",
+    "A = np.array([[5, 3], [0, 1]]) # Identity\n",
+    "C = np.array([[1,4], [2,1]]) # Surjective\n",
+    "d = np.array([3,2])\n",
+    "b = np.array([2,4])\n",
+    "\n",
+    "compare_methods(A, b, C, d)"
+   ]
   }
  ],
  "metadata": {
